# StoryTell

./: .gitignore  README.md  docker-compose.yml  makemigrations.sh  migrate.sh  technical_plan.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4308e1ef0552_auto.py  93f840ff53ba_auto.py  cd761b5b8da3_auto.py
backend/app/: cli.py  config.py  database.py  logging.py  main.py  seed.py
backend/app/ai/chains/: image_generator.py  prompt_enhancer.py  schemas.py  story_breakdown.py  voice_generator.py
backend/app/api/: stories.py
backend/app/models/: __init__.py  base.py  generation_job.py  story.py  story_section.py
backend/app/schemas/: __init__.py
backend/app/services/: cover_service.py  generation_service.py  media_service.py  story_service.py
backend/app/templates/: index.html
backend/app/workers/: celery_app.py  tasks.py
mobile/: App.tsx  app.json  package.json  tsconfig.json
mobile/src/api/: client.ts  stories.ts
mobile/src/components/: Badge.tsx  Header.tsx  JobItem.tsx  SectionCard.tsx  StoryCard.tsx
mobile/src/hooks/: useStories.ts  useStory.ts
mobile/src/screens/: HomeScreen.tsx  StoryScreen.tsx
mobile/src/theme/: index.ts
mobile/src/types/: index.ts
